--- a/spanive/index.html
+++ b/spanive/index.html
@@ -15,10 +15,9 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
     <script>
-      window.onerror = function(msg, url, lineNo, columnNo, error) {
-        console.error('Error: ' + msg + '\nURL: ' + url + '\nLine: ' + lineNo + '\nColumn: ' + columnNo + '\nError object: ' + JSON.stringify(error));
-        return false;
-      };
+      window.addEventListener('error', function(e) {
+        console.error('Global error:', e.error);
+      });
     </script>
   </body>
 </html>
