--- a/spanive/index.html
+++ b/spanive/index.html
@@ -17,6 +17,9 @@
     <script>
       window.addEventListener('error', function(e) {
         console.error('Global error:', e.error);
+        if (e.error?.message?.includes('MIME type')) {
+          console.error('MIME type error detected. Please check server configuration.');
+        }
       });
     </script>
   </body>
