--- a/spanive/index.html
+++ b/spanive/index.html
@@ -13,6 +13,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <!-- Vite will auto-inject scripts here -->
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
